added category crud, changed some css and merge sneakers with category

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,13 +1,17 @@
 .bg-secondary {
-    background-color: #171717 !important;
+    background-color: #eeeeee !important;
 }
 
-.copyright {
+.bg-third {
     background-color: #444444;
 }
 
 .bg-primary {
-    background-color: #da0037 !important;
+    background-color: #d72323 !important;
+}
+
+.bg-fourth {
+    background-color: #eeeeee !important;
 }
 
 nav {
