created clothes crud and views, they need to bo fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,3 +21,9 @@ nav {
     height: 18vw;
     object-fit: cover;
 }
+.bg-card {
+    background-color: #d72323 !important;
+}
+.bg-card-sneaker {
+    background-color: #ffffff !important;
+}
