fixed admin panel index tab

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,9 +1,9 @@
 .bg-secondary {
-    background-color: #eeeeee !important;
+    background-color: #414141 !important;
 }
 
 .bg-third {
-    background-color: #444444;
+    background-color: #252525;
 }
 
 .bg-primary {
